# rust-solana-cli

./: Cargo.toml  readme.md  solana-name-service.md  solana-token.md
src/: libp2p_chat.rs  main.rs
