[package]
name = "rust-solana-cli"
version = "0.1.0"
authors = ["Sacha Pignot <sacha.pignot@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.43.0"
clap = "2.33.3"
shell_command = "0.1.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
